--- a/package.json
+++ b/package.json
@@ -3,7 +3,10 @@
   "version": "0.0.1",
   "description": "A 2d adventure game using HTML canvas",
   "main": "index.tsx",
-  "repository": "https://github.com/Ritural/adventure-game.git",
+  "repository": {
+    "type": "git",
+    "url": "git@github.com:Ritural/adventure-game.git"
+  },
   "author": "Kallan Jones",
   "license": "MIT",
   "scripts": {
@@ -13,53 +16,63 @@
     "test": "jest --watch",
     "collate-svgs": "node tools/collate-svgs.js"
   },
-  "dependencies": {},
+  "dependencies": {
+    "eslint-plugin-import": "^2.20.0",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "prettier": "^1.19.1"
+  },
   "devDependencies": {
-    "@babel/core": "^7.1.6",
-    "@babel/plugin-proposal-class-properties": "^7.1.0",
-    "@babel/plugin-proposal-object-rest-spread": "^7.0.0",
-    "@babel/preset-env": "^7.1.6",
-    "@babel/preset-react": "^7.0.0",
-    "@babel/preset-typescript": "^7.1.0",
-    "@types/classnames": "^2.2.6",
-    "@types/jest": "^24.0.6",
-    "@types/react": "^16.4.8",
-    "@types/react-dom": "^16.0.7",
-    "@types/react-router": "^4.0.30",
-    "@types/react-router-dom": "^4.3.0",
-    "@types/webpack-env": "^1.13.6",
+    "@babel/core": "^7.8.3",
+    "@babel/plugin-proposal-class-properties": "^7.8.3",
+    "@babel/plugin-proposal-object-rest-spread": "^7.8.3",
+    "@babel/preset-env": "^7.8.3",
+    "@babel/preset-react": "^7.8.3",
+    "@babel/preset-typescript": "^7.8.3",
+    "@types/classnames": "^2.2.9",
+    "@types/jest": "^24.9.0",
+    "@types/react": "^16.9.17",
+    "@types/react-dom": "^16.9.4",
+    "@types/react-router": "^4.4.5",
+    "@types/react-router-dom": "^4.3.5",
+    "@types/webpack-env": "^1.15.0",
+    "@typescript-eslint/eslint-plugin": "^2.16.0",
+    "@typescript-eslint/parser": "^2.16.0",
     "babel-core": "^7.0.0-bridge.0",
-    "babel-jest": "^24.1.0",
-    "babel-loader": "^8.0.4",
+    "babel-jest": "^24.9.0",
+    "babel-loader": "^8.0.6",
     "classnames": "^2.2.6",
-    "css-loader": "^2.0.2",
+    "css-loader": "^2.1.1",
+    "eslint": "^6.8.0",
+    "eslint-config-airbnb": "^18.0.1",
+    "eslint-config-airbnb-base": "^14.0.0",
+    "eslint-plugin-jest": "^23.6.0",
+    "eslint-plugin-prettier": "^3.1.2",
+    "eslint-plugin-react": "^7.18.0",
+    "eslint-plugin-react-hooks": "^2.3.0",
     "file-loader": "^3.0.1",
     "html-webpack-plugin": "^3.2.0",
-    "jest": "^24.1.0",
+    "jest": "^24.9.0",
     "mini-css-extract-plugin": "^0.5.0",
-    "node-sass": "^4.9.0",
+    "node-sass": "^4.13.1",
     "path": "^0.12.7",
     "postcss-import": "^12.0.1",
     "postcss-loader": "^3.0.0",
-    "postcss-preset-env": "^6.5.0",
+    "postcss-preset-env": "^6.7.0",
     "raw-loader": "^1.0.0",
-    "react": "^16.4.2",
-    "react-dom": "^16.4.2",
-    "react-pose": "^4.0.4",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
-    "react-test-renderer": "^16.7.0",
-    "resolve-url-loader": "^3.0.0",
-    "sass-loader": "^7.1.0",
+    "react-test-renderer": "^16.12.0",
+    "resolve-url-loader": "^3.1.1",
+    "sass-loader": "^7.3.1",
     "source-map-loader": "^0.2.4",
     "style-loader": "^0.23.1",
-    "ts-jest": "^24.0.0",
-    "tslint": "^5.11.0",
-    "tslint-react": "^3.6.0",
-    "typescript": "^3.2.2",
-    "webpack": "^4.16.5",
-    "webpack-cli": "^3.1.0",
-    "webpack-dev-server": "^3.1.5",
-    "webpack-merge": "^4.2.1"
+    "ts-jest": "^24.3.0",
+    "typescript": "^3.7.5",
+    "webpack": "^4.41.5",
+    "webpack-cli": "^3.3.10",
+    "webpack-dev-server": "^3.10.1",
+    "webpack-merge": "^4.2.2"
   }
 }
